--- a/style.css
+++ b/style.css
@@ -1,14 +1,35 @@
 @import url("http://fonts.cdnfonts.com/css/pokemon-solid");
-h1 {
+html {
+  box-sizing: border-box;
+  font-size: 1rem;
+  background-color: rgb(173, 173, 173);
+  color: white;
+}
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+h1,
+h4 {
   font-family: "Pokemon Solid", sans-serif;
-  color: yellow;
+  color: hsl(60, 90%, 52%);
   text-shadow: 2px 2px 1px blue, 2px 2px 1px blue, -2px -2px 1px blue,
     -2px -2px 1px blue;
   text-align: center;
   font-size: 2.5rem;
 }
+h4 {
+  font-size: 1.25rem;
+  color: hsl(60, 90%, 71%);
+}
 nav {
   text-align: center;
+  font-size: 1.5rem;
 }
 .loader {
   display: block;
